resolve some IntelliJ notices